# nirenberg-neural-network

./: .gitignore  CONTRIBUTING.md  README.md  citation.cff  examine_output.ipynb  metric_visualisation.ipynb  prescd_k.npy  pyproject.toml  quick_start.ipynb  run.py
analysis/: get_pretty_name.py  move_runs_to_config.py  scatter_r-kind.py
configs/known/: 3cos2.yaml  5cos3.yaml  5cos3_1.yaml  cos2_theta_plus_offset.yaml  cos_theta_plus_sin2_theta_cos_phi_over_four.yaml  cos_theta_plus_sin2_theta_sin_phi_over_four.yaml  cosh_profile.yaml  egg.yaml  monotonic_exp.yaml  negative_dip.yaml  nodal_crossing.yaml  prop_a.yaml  prop_b.yaml  prop_c.yaml  round.yaml  sinusoidal.yaml  tanh_wave.yaml  two_plus_x.yaml  two_plus_y.yaml  z_plus_x_squared_over_4.yaml  z_plus_xy.yaml  zero.yaml
configs/sh/: sh_1_0.yaml  sh_1_1.yaml  sh_1_2.yaml  sh_1_3.yaml  sh_1_4.yaml  sh_2_0.yaml  sh_3_0.yaml  sh_3_1.yaml  sh_3_2.yaml  sh_3_3.yaml  sh_3_4.yaml  sh_5_1.yaml  sh_5_2.yaml  sh_5_3.yaml  sh_5_4.yaml  sh_7_1.yaml  sh_7_2.yaml  sh_7_3.yaml  sh_7_4.yaml
configs/unknown/: x2_minus_y2_plus_z.yaml  x2_plus_2y2_plus_3z2_plus_x_plus_y.yaml  x2_plus_yz_plus_x.yaml  x2_plus_yz_plus_x_plus_1.yaml  xy_plus_x_plus_y.yaml  y2_plus_xz_plus_z_minus_1.yaml
data/: dataset.py  prescribers.py  samplers.py
geometry/: ball.py  integration.py
hyperparameters/: shrink_domains.py
loss/: losses.py
network/: global_conformal_model.py  resblock.py  rff.py
schemas/: enums.py  optim_checkpoint_doc.py  schemas.py
sh_expansion/: README.md  load_sh.py  run_sh_direct.py  run_sh_model.py  sh_functions.py
