[project]
name = "ainstein-KW"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "tensorflow[and-cuda]",
    "jsonargparse",
    "matplotlib",
    "numpy<2",
    "wandb",
    "pandas",
    "polars",
    "dacite",
    "scipy",
    "scikit-learn",
    "ipython",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100
